--- a/2016_study/pom.xml
+++ b/2016_study/pom.xml
@@ -186,7 +186,27 @@
         <artifactId>log4jdbc-remix</artifactId>
         <version>0.2.7</version>
     </dependency>
-    
+
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi</artifactId>
+    	<version>3.15</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi-ooxml</artifactId>
+    	<version>3.15</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.0.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-fileupload</groupId>
+    	<artifactId>commons-fileupload</artifactId>
+    	<version>1.3.2</version>
+    </dependency>
   </dependencies>
     <build>
         <plugins>
