--- a/2016_study/src/main/webapp/WEB-INF/web.xml
+++ b/2016_study/src/main/webapp/WEB-INF/web.xml
@@ -4,11 +4,12 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   
   <display-name>HelloSpringWebStudy</display-name>
-  <welcome-file-list>
+  <!-- index... 보안... -->
+  <!-- <welcome-file-list>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+  </welcome-file-list> -->
   
   <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
   <context-param>
@@ -27,6 +28,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
+      <!-- 클래스패스경로로 변경 -->
       <param-value>/WEB-INF/config/*-servlet.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
@@ -59,6 +61,15 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+  
+  <!-- 세션 타임아웃 -->
+  
+  <!-- 중복로그인???? -->
+  
+  <!-- 필터 -->
+  
+  <!-- xss필터 보안.. sql Injection 특수문자...걸러내주는-->
+  
   
   <!-- Error -->
   <error-page>
