--- a/2016_study/src/main/webapp/WEB-INF/web.xml
+++ b/2016_study/src/main/webapp/WEB-INF/web.xml
@@ -1,92 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-  
-  <display-name>HelloSpringWebStudy</display-name>
-  <!-- index... 보안... -->
-  <!-- <welcome-file-list>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list> -->
-  
-  <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:/spring/spring-config-*.xml</param-value>
-  </context-param>
-  
-  <!-- Creates the Spring Container shared by all Servlets and Filters -->
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+ 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-  <!-- Processes application requests -->
-  <servlet>
-    <servlet-name>appServlet</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <init-param>
-      <param-name>contextConfigLocation</param-name>
-      <!-- 클래스패스경로로 변경 -->
-      <param-value>/WEB-INF/config/*-servlet.xml</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  <!-- utf-8 filter -->
-  <filter>
-      <filter-name>encodingFilter</filter-name>
-      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-      <init-param>
-          <param-name>encoding</param-name>
-          <param-value>UTF-8</param-value>
-      </init-param>
-  </filter>
-
-  <filter-mapping>
-      <filter-name>encodingFilter</filter-name>
-      <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-  <servlet-mapping>
-    <servlet-name>appServlet</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
-  
-  
-  <resource-ref>
-    <description>DB Connection</description>
-    <res-ref-name>jdbc/study</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-  
-  <!-- 세션 타임아웃 -->
-  
-  <!-- 중복로그인???? -->
-  
-  <!-- 필터 -->
-  
-  <!-- xss필터 보안.. sql Injection 특수문자...걸러내주는-->
-  
-  
-  <!-- Error -->
-  <error-page>
-    <exception-type>java.lang.Throwable</exception-type>
-    <location>/WEB-INF/views/common/errorException.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>400</error-code>
-    <location>/WEB-INF/views/common/errorCode400.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>404</error-code>
-    <location>/WEB-INF/views/common/errorCode404.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>500</error-code>
-    <location>/WEB-INF/views/common/errorCode500.jsp</location>
-  </error-page>
-
+	<display-name>HelloSpringWebStudy</display-name>
+	<!-- index... 보안... -->
+	<!-- <welcome-file-list>
+	  <welcome-file>index.htm</welcome-file>
+	  <welcome-file>index.html</welcome-file>
+	  <welcome-file>index.jsp</welcome-file>
+	</welcome-file-list> -->
+	
+	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<context-param>
+	  <param-name>contextConfigLocation</param-name>
+	  <param-value>classpath:/spring/spring-config-*.xml</param-value>
+	</context-param>
+	
+	<!-- Creates the Spring Container shared by all Servlets and Filters -->
+	<listener>
+	  <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<!-- Processes application requests -->
+	<servlet>
+	  <servlet-name>appServlet</servlet-name>
+	  <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	  <init-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <!-- 클래스패스경로로 변경 //success-->
+	    <param-value>/WEB-INF/config/*-servlet.xml</param-value>
+	  </init-param>
+	  <load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<!-- utf-8 filter -->
+	<filter>
+	    <filter-name>encodingFilter</filter-name>
+	    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	    <init-param>
+	        <param-name>encoding</param-name>
+	        <param-value>UTF-8</param-value>
+	    </init-param>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>encodingFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+	<servlet-mapping>
+	  <servlet-name>appServlet</servlet-name>
+	  <url-pattern>/</url-pattern>
+	</servlet-mapping>
+	
+	
+	<resource-ref>
+	  <description>DB Connection</description>
+	  <res-ref-name>jdbc/study</res-ref-name>
+	  <res-type>javax.sql.DataSource</res-type>
+	  <res-auth>Container</res-auth>
+	</resource-ref>
+	
+	<!-- 세션 타임아웃 //success-->
+	<session-config>
+	<session-timeout>120</session-timeout>
+	</session-config>
+	<!-- 중복로그인???? -->
+	
+	<!-- 필터 -->
+	
+	<!-- xss필터 보안.. sql Injection 특수문자...걸러내주는-->
+	
+	
+	<!-- Error -->
+	<error-page>
+	  <exception-type>java.lang.Throwable</exception-type>
+	  <location>/WEB-INF/views/common/errorException.jsp</location>
+	</error-page>
+	<error-page>
+	  <error-code>400</error-code>
+	  <location>/WEB-INF/views/common/errorCode400.jsp</location>
+	</error-page>
+	<error-page>
+	  <error-code>404</error-code>
+	  <location>/WEB-INF/views/common/errorCode404.jsp</location>
+	</error-page>
+	<error-page>
+	  <error-code>500</error-code>
+	  <location>/WEB-INF/views/common/errorCode500.jsp</location>
+	</error-page>
 </web-app>
